# Gravity-with-octagonal-tree

./: .gitignore  CMakeLists.txt  CMakePresets.json  Projectplan.tex  README.md  README_DEV.md  build-cuda.bat  main.cpp  setup.bat  setup.ps1  vcpkg.json
Report/: main.tex  refs.bib
Report/_minted/: C3A17614D76ADC8DBCD39A83578C6BE2.highlight.minted  _FAD58DE7366495DB4650CFEFAC2FCD61.index.minted
Report/sections/: exercise.tex  report.tex  sample.tex  title.tex
include/: Body.hpp  Galaxy.hpp  Octree.hpp  OctreeNode.hpp  Physics.hpp  PhysicsCUDA.cuh  PhysicsGPU.hpp  Renderer.hpp  Vec3.hpp
n-body-simulation/: CMakeLists.txt
n-body-simulation/include/: Physics.hpp
n-body-simulation/src/: Body.cpp  Physics.cpp  Renderer.cpp  Vec3.cpp  main.cpp
shaders/: vertex.glsl
src/: Body.cpp  CMakeLists.txt  Galaxy.cpp  Octree.cpp  OctreeNode.cpp  Physics.cpp  PhysicsGPU.cpp  Renderer.cpp  Vec3.cpp  glad.c  main.cpp
src/Core/: Particle.hpp  architecture.md
src/Physics/: BarnesHutSolver.cpp  BarnesHutSolver.hpp  BruteForceSolver.cpp  BruteForceSolver.hpp  ISolver.hpp
src/Structure/: GalaxyGenerator.hpp
src/Utils/: GalaxyGenerator.cpp
src/cuda/: PhysicsCUDA.cu
tests/: CMakeLists.txt  core_tests.cpp
